--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,40 +1,78 @@
+:root{
+    --black: #000;
+    --white: #fff;
+    --h1: calc(1.625rem + 3.5vw);
+    --mb: 20px;
+    --p: calc(1.275rem + .6vw);
+    --h2: calc(1.525rem + 3.3vw);
+}
+*{margin:0;padding:0;}
 body{
 	background-color: #fff;
+    font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir, "Nimbus Sans L", Roboto, Noto, "Segoe UI", Arial, Helvetica, "Helvetica Neue", sans-serif;
+    font-size: 16px;
+    overflow-x: hidden;
 }
 
 /** Main Home styles ***/
+h1{
+    font-size: var(--h1);
+    margin-bottom: var(--mb);
+}
+h2{
+    font-size: var(--h2);
+    margin-bottom: var(--mb);
+}
+h3{
+    font-size: calc(1.335rem + 1.3vw);
+    margin-bottom: var(--mb);
+}
+p{margin-bottom: var(--mb);font-size: var(--p);}
 .home-main{
 	height: 100vh;
-	color: #fff;
 }
 .bg-clips{
 	clip-path: circle(73.9% at 35% 26%);
-	background: #000;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	background:#000;
-	z-index: -1;
-	clip-path: polygon(0 0, 95% 0, 70% 67%, 0% 100%);
+    position: absolute;
+    width: 100%;
+    height: 250px;
+    background: #251351;
+    z-index: -1;
+    clip-path: polygon(0 0, 95% 0, 70% 67%, 0% 100%);
+    
 }
-
+.n-flip{
+    top: -40px;
+    left: -100px;
+    border-bottom-right-radius: 70%;
+    transform: skew(7deg);
+}
+.y-flip{
+    border-bottom-right-radius: 70%;
+    transform: rotate(180deg);
+    bottom: 0px;
+    right: -240px;
+}
+.fl-block{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.lead span{font-weight: bolder;}
 .profile-text{
 	display: flex;
     flex-direction: column;
     justify-content: center;
     height: inherit;
-    width: 45vw;
+    width: 70vw;
     margin: auto;
 }
 
-.profile-links{
-	position: absolute;
-    bottom: 0;
-    right: 3%;
-}
+
 .profile-links > ul li{
-	padding-bottom: 20px;
-	padding-right: 20px;
+	margin-right: var(--mb);
+    margin-bottom: var(--mb);
 	display: inline-block;
 }
 .profile-links a{
@@ -44,13 +82,16 @@ body{
 	font-size: 1.2em;
 }
 .profile-links a:before{
-    position: absolute;
+   position: absolute;
     content: '';
     top: 100%;
-    left: 0;
-    border: 5px solid #000;
+    left: 14px;
+    /* border: 5px solid #000; */
     border-radius: 25px;
-    transition:all 0.4s linear;
+    transition: all 0.4s linear;
+    width: 10px;
+    height: 4px;
+    background: #000;
 }
 .profile-links a:hover:before{
 	transform: translate(70px);
@@ -65,77 +106,67 @@ body{
 
 .section-highlight:before{
 	position: absolute;
-	width: 200px;
-	height: 5px;
-	background-color: #000;
-	content: '';
-	top: 0;
-	left: 50px;
-	border-radius: 25px;
+    width: 200px;
+    height: 5px;
+    background-color: #000;
+    content: '';
+    top: 0;
+    left: 50%;
+    border-radius: 25px;
+    transform: translate(-50%, -50%);
+}
+.head-wrap{
+display: flex;
+    justify-content: center;
 }
 .skills-main h2{
-     max-width: 360px;
-    font-weight: bold;
-    width: 100%;
+    padding: 20px;
+    text-align: center;
 }
-.skills{
-    -webkit-text-stroke: 2px #000;
+.txt{
+        -webkit-text-stroke: 2px #000;
     color: #fff;
+    font-size: calc(1.375rem + 1.5vw);
+    padding: 20px;
+    cursor: pointer;
 }
-.skills:hover{
+.txt:hover{
     color: #000;
 }
-.skills-fill{
+.txt-fill{
     color: #000;
 }
-.skills-fill:hover{
+.txt-fill:hover{
 	-webkit-text-stroke: 2px #000;
     color: #fff;
 }
-
-/* Work Main */
-.tech-row{
-	padding: 80px 0;
-}
-.your-element{
-	background-image: -webkit-linear-gradient(
-315deg
-, #ff00ba 0%, #fae713 100%);
-    background-image: linear-gradient(
-135deg
-, #ff00ba 0%, #fae713 100%);
-    transform-style: preserve-3d;
-    transform: perspective(1000px);
-    height: 400px;
-    background: #003F91;
-}
-.innertext{
-	ransform: translateZ(30px);
-    /* box-shadow: 0 0 50px 0 rgb(51 51 51 / 30%); */
+.card-wrap{
     display: flex;
-    /* align-self: center; */
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.card{
+    border-radius: 20px;
+    border: 2px solid;
+    padding: 40px;
+    position: relative;
+    margin: 40px auto;
+    max-width: 40vw
+}
+.card p{
+        font-size: calc(1.175rem + .2vw);
+}
+footer{
+    background: #251351;
+    max-width: 80vw;
+    padding: 80px;
+    display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 70px;
     color: #fff;
-    text-shadow: 0px 7px 29px #000;
+    border-bottom-left-radius: 100px;
+    border-top-right-radius: 100px;
+    border-top-left-radius: 10px;
+    margin: 40px;
 }
-.tech-row:hover .tech{opacity: 1}
-.tech{
-	opacity: 0;
-    height: 120px;
-    width: 120px;
-    font-size: 1.5rem;
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-    justify-content: center;
-    transition: opacity 0.4s ease;
-    transform: translateZ(30px);
-    box-shadow: 2px 5px 40px #000;
-}
-
-.fade-page{
-	text-decoration: none;
-}
-
